# hospwork

./: .envrc  .gitignore  Pipfile  README.md  cacert.pem  cgmh.py  csmpt.py  flake.nix  getjupytertemplate.sh  getpythonversion.sh  initjupytertemplate.sh  initkernel.sh  ntuh.py  pyproject.toml  setup.py  shell.nix  vghks.py  vghtpe.py
.github/workflows/: dependency-review.yml
hospwork/: __init__.py  __main__.py  cgmh.py  csmpt.py  cych.py  error.py  hch.py  hospital_work.py  kmsh.py  main.py  ntucc.py  ntuh.py  skh.py  tool.py  vghks.py  vghtc.py  vghtpe.py  vhcy.py  ylh.py
hospwork/io/: sqlite.py
hospwork/tool/: httpadapter.py  job.py  time.py  web.py
hospwork/tool/.ipynb_checkpoints/: job-checkpoint.py
notebook/: cgmh.ipynb  csmpt.ipynb  cych.ipynb  hch.ipynb  kmsh.ipynb  main.ipynb  ncku.ipynb  ntucc.ipynb  ntuh.ipynb  tahsda.ipynb  tmuh.ipynb  vghks.ipynb  vghks.py  vghtc.ipynb  vghtpe.ipynb  vhcy.ipynb  ylh.ipynb
test/: test_Cgmh.py  test_Cych.py  test_Hospital_work.py  test_Ntucc.py  test_Ntuh.py  test_Vghtc.py  test_Vghtpe.py  test_Vhcy.py  test_Ylh.py  test_tool.py
